<resources>
    <string name="app_name">CTRL-C</string>
    <string name="skip_title">Skip</string>
    <string name="next_title">Next</string>
    <string name="title_onboarding_1">Enjoy Our Cups of Coffee \n with just One Tap!</string>
    <string name="title_onboarding_2">Discover the Perfect Brew!</string>
    <string name="get_started_title">Get Started</string>
    <string name="description_onboarding_1"> Your daily dose of caffeine, just a tap away!</string>
    <string name="description_onboarding_2"> The Best premium Quality Coffee, made by the love of our Baristas!</string>
    <string name="login_title">Hello, let\'s sign in</string>
    <string name="signup">Sign Up</string>
    <string name="new_to_ctrlC">New to CTRL+C?</string>
    <string name="email">Email</string>
    <string name="et_email_error_message">Email address is not valid!</string>
    <string name="message_login">Your coffee, your choice, your convenience.</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Sign in</string>
    <string name="signup_title">Let\'s create an account</string>
    <string name="signup_message">Let\'s create an account for you ✨</string>
    <string name="fullname">Full Name</string>
    <string name="nickname">Nickname</string>
    <string name="confirm_password">Confirm Password\n</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="username">Ignatius</string>
    <string name="order_now">Order Now</string>
    <string name="vouchers">Vouchers</string>
    <string name="pick_up_title">Pick Up</string>
    <string name="pick_up_desc">Self Pick up without queueing</string>
    <string name="delivery_title">Delivery</string>
    <string name="delivery_desc">Order delivered to your location</string>
    <string name="welcome_title">Welcome!</string>
    <string name="order">Pickup Order</string>
    <string name="store_location">Choose store\'s location</string>
    <string name="tv_self_pickup">Hey there!</string>
    <string name="coffee">Coffee</string>
    <string name="bundle">Bundle</string>
    <string name="signature">Signature</string>
    <string name="tea">Tea</string>
    <string name="ice_blended">Ice-Blended</string>
    <string name="snacks">Snacks</string>
    <string name="description_self_pickup">Let\'s order and pick up yourself!</string>
    <string name="default_product_name">Es Kopi Susu Gula Aren</string>
    <string name="default_product_description">Es Kopi yang dicampur dengan susu dan gula aren.</string>
    <string name="default_product_price_currency">Rp. </string>
    <string name="default_product_price">25.000</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="order_title">Transaction History</string>
    <string name="transaction_status">Ongoing</string>
    <string name="transaction_location">Paris Van Java</string>
    <string name="transaction_date">Senin, 04 Sep 2023.</string>
    <string name="transaction_time">14:07</string>
    <string name="transaction_menu_order">1x Iced Aren Latte\n3x Hot Chocolatte</string>
    <string name="transaction_menu_price">17.000\n36.000</string>
    <string name="transaction_total">Total :\t\t\t\tRp 17.000</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_delivery">What coffe would you like to order?</string>
    <string name="choose_your_location">Choose your location</string>
    <string name="menu_name">Arabica</string>
    <string name="menu_desc">"Nikmatnya kopi arabica sebagai kopi pendamping di pagi hari "</string>
    <string name="menu_price">Rp 25.000</string>
    <string name="pilihan_tersedia_text">Available Options</string>
    <string name="ukuran_cup_text">Cup Size</string>
    <string name="regular_size_text">Regular</string>
    <string name="large_size_text">Large</string>
    <string name="menu_qty">2</string>
    <string name="input_menu_price">Add Rp 50.000</string>
    <string name="iced_option">Iced</string>
    <string name="hot_option">Hot</string>
    <string name="sweetness_level">Sweetness Level</string>
    <string name="normal_sugar">Normal</string>
    <string name="less_sugar">Less Sugar</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="profile_title">Account</string>
    <string name="profile_name">Ignatius</string>
    <string name="profile_number">+624901841290</string>
    <string name="profile_email">ctrlc@gmail.com</string>
    <string name="logout">Logout</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="edit_profile_name_temp">Ignatius</string>
    <string name="fullname_desc">Fullname</string>
    <string name="email_desc">Email</string>
    <string name="email_hint_desc">ctrlc@gmail.com</string>
    <string name="password_desc">Password</string>
    <string name="password_hint_desc">thisismypass</string>
    <string name="save_profile_changes">Save Changes</string>
    <string name="detail_voucher_title">Detail Voucher</string>
    <string name="voucher_name">Neque porro quisquam est qui dolorem Neque </string>
    <string name="voucher_desc">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eleifend quam et ligula molestie, vel pharetra elit efficitur. Curabitur consequat tellus gravida elit lobortis, non dignissim magna convallis. Nam ut augue in dolor sodales tempor. "</string>
    <string name="use_voucher_button">Use Now!</string>
    <string name="avail_until_title">Available untill</string>
    <string name="avail_until_desc">31 Okt 2023</string>
    <string name="min_transaction_title">Min. Transaction</string>
    <string name="min_transaction_desc">50k</string>
</resources>