<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.order.pickup.SelfPickUpOrderActivity">

    <LinearLayout
        android:id="@+id/linear_layout_part"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_140"
        android:background="@color/light_brown"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_self_pickup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_self_pickup"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_24"
            android:textStyle="bold" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="@dimen/spacing_300"
        android:layout_height="@dimen/spacing_80"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linear_layout_part"
        app:layout_constraintStart_toStartOf="@+id/linear_layout_part"
        app:layout_constraintTop_toTopOf="@+id/linear_layout_part"
        app:layout_constraintVertical_bias="0.16"
        app:shapeAppearanceOverlay="@style/textField_rounded">

        <AutoCompleteTextView
            android:id="@+id/auto_complete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/store_location"
            android:inputType="none"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_16"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linear_layout_part"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/linear_layout_part"
        app:layout_constraintTop_toTopOf="@+id/linear_layout_part"
        app:layout_constraintVertical_bias="0.269">

        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:singleLine="true">

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coffee"
                app:chipBackgroundColor="@color/white"
                app:rippleColor="@color/matcha_green" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bundle"
                app:chipBackgroundColor="@color/white"
                app:rippleColor="@color/matcha_green" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signature"
                app:chipBackgroundColor="@color/white"
                app:rippleColor="@color/matcha_green" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tea"
                app:chipBackgroundColor="@color/white"
                app:rippleColor="@color/matcha_green" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ice_blended"
                app:chipBackgroundColor="@color/white"
                app:rippleColor="@color/matcha_green" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/snacks"
                app:chipBackgroundColor="@color/white"
                app:rippleColor="@color/matcha_green" />

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>