<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.login.LoginActivity">


    <ImageView
        android:id="@+id/iv_login_illustration"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:layout_marginTop="@dimen/spacing_32"
        android:alpha="0"
        android:src="@drawable/ctrl_c_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:alpha="1" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_16"
        android:alpha="0"
        android:text="@string/login_title"
        android:textSize="@dimen/text_size_28"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_login_illustration"
        tools:alpha="1" />

    <TextView
        android:id="@+id/tv_login_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_32"
        android:layout_marginTop="@dimen/spacing_4"
        android:alpha="0"
        android:text="@string/message_login"
        android:textSize="@dimen/text_size_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login"
        tools:alpha="1" />

    <com.example.ctrl_c.customviews.EmailEditText
        android:id="@+id/et_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_32"
        android:layout_marginTop="@dimen/spacing_32"
        android:autofillHints="@string/email"
        android:drawableStart="@drawable/ic_account"
        android:drawablePadding="@dimen/spacing_6"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_msg"
        tools:alpha="1" />


    <com.example.ctrl_c.customviews.PasswordEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_32"
        android:layout_marginTop="@dimen/spacing_16"
        android:autofillHints="@string/password"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Email"
        app:passwordToggleEnabled="true"
        tools:alpha="1" />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="@id/et_password"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        tools:alpha="1" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_32"
        android:layout_marginTop="@dimen/spacing_24"
        android:backgroundTint="@color/matcha_green"
        android:padding="@dimen/spacing_12"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password"
        tools:alpha="1" />

    <LinearLayout
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_8"
        android:padding="@dimen/spacing_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:alpha="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_to_ctrlC"
            android:textSize="@dimen/text_size_12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_6"
            android:text="@string/signup"
            android:textSize="@dimen/text_size_12"
            android:textColor="@color/pink_500"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
