<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/order_background"
    tools:context=".ui.order.delivery.DeliveryOrderActivity">

    <LinearLayout
        android:id="@+id/linear_layout_part"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_128"
        android:background="@color/light_brown"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_self_pickup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_self_pickup"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_24"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_delivery"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_20"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/spacing_300"
        android:layout_height="@dimen/spacing_56"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/beige"
            android:drawableLeft="@drawable/baseline_location_on_24"
            android:text="@string/choose_your_location"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/text_size_18"
            app:shapeAppearanceOverlay="@style/textField_rounded" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="@dimen/spacing_300"
        android:layout_height="@dimen/spacing_56"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linear_layout_part"
        app:layout_constraintStart_toStartOf="@+id/linear_layout_part"
        app:layout_constraintTop_toTopOf="@+id/linear_layout_part"
        app:layout_constraintVertical_bias="0.23"
        app:shapeAppearanceOverlay="@style/textField_rounded"
        app:startIconDrawable="@drawable/baseline_store_24">

        <AutoCompleteTextView
            android:id="@+id/auto_complete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/beige"
            android:hint="@string/store_location"
            android:inputType="none"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_16"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linear_layout_part"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/linear_layout_part"
        app:layout_constraintTop_toTopOf="@+id/linear_layout_part"
        app:layout_constraintVertical_bias="0.3">

        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:singleLine="true">

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coffee"
                app:chipBackgroundColor="@color/white"
                app:rippleColor="@color/matcha_green" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bundle"
                app:chipBackgroundColor="@color/white"
                app:rippleColor="@color/matcha_green" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signature"
                app:chipBackgroundColor="@color/white"
                app:rippleColor="@color/matcha_green" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tea"
                app:chipBackgroundColor="@color/white"
                app:rippleColor="@color/matcha_green" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ice_blended"
                app:chipBackgroundColor="@color/white"
                app:rippleColor="@color/matcha_green" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/snacks"
                app:chipBackgroundColor="@color/white"
                app:rippleColor="@color/matcha_green" />

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_5"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="@+id/linear_layout_part"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
        tools:listitem="@layout/menu_list" />


</androidx.constraintlayout.widget.ConstraintLayout>